C-Abi-Bridge-Aot/Tests/CAbiBridge.Aot.Cpp.Tests/bright.h



//#pragma comment(lib, "C-Abi-Bridge.Aot.lib")

// ---------------------------------------------------------
// Allocation
// ---------------------------------------------------------

CABI_IMPORT void free_buffer_aot(void* ptr);


// ---------------------------------------------------------
// AES
// ---------------------------------------------------------

CABI_IMPORT cerror_t aes_encrypt_aot(
  const std::uint8_t* bytes, int bytes_length,
  const void* key, int key_length,
  const std::uint8_t* associated, int associated_length,
  void** output, int* output_length);


CABI_IMPORT cerror_t aes_decrypt_aot(
  const std::uint8_t* bytes, int bytes_length,
  const void* key, int key_length,
  const std::uint8_t* associated, int associated_length,
  void** output, int* output_length);


CABI_IMPORT cerror_t aes_encrypt_file_aot(
  const std::uint8_t* src, int src_length,
  const std::uint8_t* dest, int dest_length,
  const void* key, int key_length,
  const std::uint8_t* associated, int associated_length);


CABI_IMPORT cerror_t aes_decrypt_file_aot(
  const std::uint8_t* src, int src_length,
  const std::uint8_t* dest, int dest_length,
  const void* key, int key_length,
  const std::uint8_t* associated, int associated_length);


// ---------------------------------------------------------
// AES‑GCM
// ---------------------------------------------------------

CABI_IMPORT cerror_t aes_gcm_encrypt_aot(
  const std::uint8_t* bytes, int bytes_length,
  const void* key, int key_length,
  const std::uint8_t* associated, int associated_length,
  void** output, int* output_length);


CABI_IMPORT cerror_t aes_gcm_decrypt_aot(
  const std::uint8_t* bytes, int bytes_length,
  const void* key, int key_length,
  const std::uint8_t* associated, int associated_length,
  void** output, int* output_length);


CABI_IMPORT cerror_t aes_gcm_encrypt_file_aot(
  const std::uint8_t* src, int src_length,
  const std::uint8_t* dest, int dest_length,
  const void* key, int key_length,
  const std::uint8_t* associated, int associated_length);


CABI_IMPORT cerror_t aes_gcm_decrypt_file_aot(
  const std::uint8_t* src, int src_length,
  const std::uint8_t* dest, int dest_length,
  const void* key, int key_length,
  const std::uint8_t* associated, int associated_length);


// ---------------------------------------------------------
// ChaCha20‑Poly1305
// ---------------------------------------------------------

CABI_IMPORT cerror_t chacha20_poly1305_encrypt_aot(
  const std::uint8_t* bytes, int bytes_length,
  const void* key, int key_length,
  const std::uint8_t* associated, int associated_length,
  void** output, int* output_length);


CABI_IMPORT cerror_t chacha20_poly1305_decrypt_aot(
  const std::uint8_t* bytes, int bytes_length,
  const void* key, int key_length,
  const std::uint8_t* associated, int associated_length,
  void** output, int* output_length);


CABI_IMPORT cerror_t chacha20_poly1305_encrypt_file_aot(
  const std::uint8_t* src, int src_length,
  const std::uint8_t* dest, int dest_length,
  const void* key, int key_length,
  const std::uint8_t* associated, int associated_length);


CABI_IMPORT cerror_t chacha20_poly1305_decrypt_file_aot(
  const std::uint8_t* src, int src_length,
  const std::uint8_t* dest, int dest_length,
  const void* key, int key_length,
  const std::uint8_t* associated, int associated_length);


// ---------------------------------------------------------
// Crypto Random
// ---------------------------------------------------------

// Bytes
CABI_IMPORT cerror_t rng_crypto_bytes_aot(int size, void** out_ptr);

CABI_IMPORT cerror_t fill_crypto_bytes_aot(const std::uint8_t* bytes, int length);


// Bools
CABI_IMPORT bool next_crypto_bool_aot(cerror_t* err);

CABI_IMPORT cerror_t rng_crypto_bool_aot(int size, void** out_ptr);


// Int32
CABI_IMPORT int next_crypto_int32_aot(cerror_t* err);

CABI_IMPORT int next_crypto_int32_max_aot(int max, cerror_t* err);

CABI_IMPORT int next_crypto_int32_min_max_aot(int min, int max, cerror_t* err);

CABI_IMPORT cerror_t rng_crypto_int32_aot(int size, void** out_ptr);

CABI_IMPORT cerror_t rng_crypto_int32_max_aot(int size, int max, void** out_ptr);

CABI_IMPORT cerror_t rng_crypto_int32_min_max_aot(int size, int min, int max, void** out_ptr);


// Int64
CABI_IMPORT int64_t next_crypto_int64_aot(cerror_t* err);

CABI_IMPORT int64_t next_crypto_int64_max_aot(int64_t max, cerror_t* err);

CABI_IMPORT int64_t next_crypto_int64_min_max_aot(int64_t min, int64_t max, cerror_t* err);

CABI_IMPORT cerror_t rng_crypto_int64_aot(int size, void** out_ptr);

CABI_IMPORT cerror_t rng_crypto_int64_max_aot(int size, int64_t max, void** out_ptr);

CABI_IMPORT cerror_t rng_crypto_int64_min_max_aot(int size, int64_t min, int64_t max, void** out_ptr);


// Double
CABI_IMPORT double next_crypto_double_aot(cerror_t* err);

CABI_IMPORT double next_crypto_double_max_aot(double max, cerror_t* err);

CABI_IMPORT double next_crypto_double_min_max_aot(double min, double max, cerror_t* err);

CABI_IMPORT cerror_t rng_crypto_double_aot(int size, void** out_ptr);

CABI_IMPORT cerror_t rng_crypto_double_max_aot(int size, double max, void** out_ptr);

CABI_IMPORT cerror_t rng_crypto_double_min_max_aot(int size, double min, double max, void** out_ptr);


// Float
CABI_IMPORT float next_crypto_single_aot(cerror_t* err);

CABI_IMPORT float next_crypto_single_max_aot(float max, cerror_t* err);

CABI_IMPORT float next_crypto_single_min_max_aot(float min, float max, cerror_t* err);

CABI_IMPORT cerror_t rng_crypto_single_aot(int size, void** out_ptr);

CABI_IMPORT cerror_t rng_crypto_single_max_aot(int size, float max, void** out_ptr);

CABI_IMPORT cerror_t rng_crypto_single_min_max_aot(int size, float min, float max, void** out_ptr);